# ZeroMax

./: .gitignore  Cargo.toml  README.md  run.sh
.github/workflows/: desktop.yml
apps/desktop/: Cargo.toml  build.rs
apps/desktop/src/: auth.rs  chat_list.rs  main.rs  qr.rs  runtime.rs
apps/desktop/ui/: app.slint
apps/macos/: build-rust.sh
apps/macos/ZeroMax/: Package.swift
apps/macos/ZeroMax/.swiftpm/xcode/package.xcworkspace/xcuserdata/zkq.xcuserdatad/: UserInterfaceState.xcuserstate
apps/macos/ZeroMax/Sources/ZeroMax/: ZeroMaxApp.swift  zeromax_ffi.swift
apps/macos/ZeroMax/Sources/ZeroMax/Core/: MaxService.swift  MessageCache.swift
apps/macos/ZeroMax/Sources/ZeroMax/ViewModels/: AuthViewModel.swift  ChatListViewModel.swift  ConversationViewModel.swift
apps/macos/ZeroMax/Sources/ZeroMax/Views/: ContentView.swift
apps/macos/ZeroMax/Sources/ZeroMax/Views/Auth/: LoginView.swift  QRLoginView.swift
apps/macos/ZeroMax/Sources/ZeroMax/Views/Main/: ChatListView.swift  ChatRowView.swift  ConversationView.swift  MainView.swift  MessageBubbleView.swift  MessageInputView.swift
apps/macos/ZeroMax/Sources/ZeroMaxFFI/: module.modulemap
apps/macos/ZeroMax/Sources/ZeroMaxFFI/include/: module.modulemap  zeromax_ffiFFI.h
zeromax-core/: Cargo.toml
zeromax-core/examples/: test_connect.rs  test_qr.rs
zeromax-core/src/: client.rs  constants.rs  error.rs  lib.rs
zeromax-core/src/event/: filter.rs  handler.rs  mod.rs
zeromax-core/src/protocol/: auth.rs  chats.rs  files.rs  folders.rs  messages.rs  mod.rs  opcode.rs  profile.rs  sync.rs  users.rs
zeromax-core/src/storage/: mod.rs  sqlite.rs
zeromax-core/src/transport/: dual.rs  frame.rs  mod.rs  pending.rs  queue.rs  socket.rs  websocket.rs
zeromax-core/src/types/: attachment.rs  chat.rs  common.rs  folder.rs  message.rs  mod.rs  reaction.rs  session.rs  user.rs
zeromax-ffi/: Cargo.toml  build.rs
zeromax-ffi/src/: client.rs  error.rs  events.rs  lib.rs  types.rs  zeromax_ffi.udl
