[package]
name = "zeromax-core"
version = "0.1.0"
edition = "2021"
description = "Privacy-focused MAX messenger protocol library"
license = "MIT"
rust-version = "1.75"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_repr = "0.1"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
reqwest = { version = "0.12", features = ["json", "stream", "multipart"] }
uuid = { version = "1", features = ["v4", "serde"] }
tracing = "0.1"
thiserror = "2"
dashmap = "6"
regex = "1"
rand = "0.8"
futures-util = "0.3"
rmp-serde = "1"
rmpv = "1"
lz4_flex = "0.11"
native-tls = "0.2"
tokio-native-tls = "0.3"
trait-variant = "0.1"
